fix(@CreateOrUpdateAvatar): fix api on both userRoute and swagger. setup(@NBSprojec): setup prettierrc + route refactoring.
