# config/swagger.yaml
@@ -6,12 +6,15 @@ info:
   termsOfService: http://quocbaoit.com/terms/
   contact:
     email: NBSstoreProject@quocbaoit.com
+swaggerOptions:
+  docExpansion: "none"
 tags:
   - name: Order
     description: Access to NBSstore orders
     externalDocs:
       description: Find out more
       url: http://fb.quocbaoit.com
+      docExpansion: none
   - name: Product
     description: Everything about our products
   - name: User
@@ -612,7 +615,7 @@ paths:
         - name: userId
           in: path
           description: _id of the user that needs to update the avatar, if you is admin
-          required: true
+          required: false
           schema:
             type: string
       requestBody:
